--- a/prelim/prelim.tex
+++ b/prelim/prelim.tex
@@ -12,6 +12,7 @@
 \usepackage[margin=1.25in]{geometry}
 
 \usepackage{empheq}
+\usepackage[usestackEOL]{stackengine}
 
 \input{includes/preamble}
 \input{includes/defs}
