Fix percent signs

--- a/prelim/content/5-proposal.tex
+++ b/prelim/content/5-proposal.tex
@@ -232,8 +232,8 @@ The reason for the epithermal flux requirement is to decrease the irradiation ti
 The reason for the beam quality requirements is to reduce undesired dose to healthy tissue.
 
 A lightly optimized design for a BNCT system, based off a design presented in \cite{monshizadeh2015}, is shown in Figure \ref{fig:proposal:bnct_geom}.
-The design has uses a DT fusion (~14 MeV) neutron source with a source strength of $5\times 10^{13}$ n/s.
-It uses the expensive "FLUENTAL" material, which is a mixture of 30% aluminum, 69% aluminum fluoride, and 1% lithium fluoride by mass, as the main material in the beam shaping assembly with the purpose of lowering the high-energy source neutrons down to epithermal energies, but not to thermal energies.
+The design has uses a DT fusion (\textasciitilde 14 MeV) neutron source with a source strength of $5\times 10^{13}$ n/s.
+It uses the expensive "FLUENTAL" material, which is a mixture of 30\% aluminum, 69\% aluminum fluoride, and 1\% lithium fluoride by mass, as the main material in the beam shaping assembly with the purpose of lowering the high-energy source neutrons down to epithermal energies, but not to thermal energies.
 It uses thin layers of cadmium and bismuth to reduce the thermal neutron and gamma population in the patient area.
 It surrounds the beam shaping assembly with a large amount of lead, which acts as a epithermal neutron reflector as well as an absorber of gammas.
 It contains a conical region of air between the beam shaping assembly and the patient area to obtain a more directional beam.
