--- a/prelim/content/2-background.tex
+++ b/prelim/content/2-background.tex
@@ -1,7 +1,7 @@
 \chapter{Background}
 \label{chap:bg}
 
-Placeholder
+Three concepts are introduced in this chapter: radiation transport, perturbation theory as it pertains to radiation transport, and optimization theory.
 
 \input{content/2-background-1-rt}
 \input{content/2-background-2-pert}
