--- a/prelim/content/4-testprob.tex
+++ b/prelim/content/4-testprob.tex
@@ -326,8 +326,8 @@ Since the existing moderator is already comprised of water, the detector respons
 \end{figure}
 
 Plots of $\delta R$ for some common structural materials are shown in Figures \ref{fig:tp:dR_07}, \ref{fig:tp:dR_02}, \ref{fig:tp:dR_10}, and \ref{fig:tp:dR_08}.
-The plots show that all four materials perform considerably worse than water at every location in the moderator.
-This was expected because none of these materials are considered to be effective moderators.
+The plots show that all four materials perform considerably worse than water at almost all locations in the moderator. 
+These materials showing large negative values of $\delta R$ was expected because none of these materials is considered to be an effective moderator.
 
 \begin{figure}
   \begin{minipage}{0.495\linewidth}
@@ -376,6 +376,9 @@ These materials performed even worse than the structural materials, which was ex
     \label{fig:tp:dR_09}
   \end{minipage}
 \end{figure}
+
+There do exist some small regions far from both the source and detector where iron, copper, and even boron are apparently slightly better materials than water.
+One hypothesis for the existence of this behavior is that since these regions are so far from the detector, the moderating ability of the material located there is not as important as the material's ability to scatter presumably high-energy neutrons back towards the detector, and these metals are more likely to do that than water.
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \section{MCNP Validation}
