--- a/prelim/content/5-proposal.tex
+++ b/prelim/content/5-proposal.tex
@@ -231,7 +231,7 @@ According to a 2001 IAEA technical document concerning the status of neutron cap
 The reason for the epithermal flux requirement is to decrease the irradiation time.
 The reason for the beam quality requirements is to reduce undesired dose to healthy tissue.
 
-A lightly optimized design for a BNCT system, based off a design presented in \cite{monshizadeh2015}, is shown in Figure \ref{fig:proposal:bnct_geom}.
+A lightly optimized design for a BNCT system, based on a design presented in \cite{monshizadeh2015}, is shown in Figure \ref{fig:proposal:bnct_geom}.
 The design has uses a DT fusion (\textasciitilde 14 MeV) neutron source with a source strength of $5\times 10^{13}$ n/s.
 It uses the expensive "FLUENTAL" material, which is a mixture of 30\% aluminum, 69\% aluminum fluoride, and 1\% lithium fluoride by mass, as the main material in the beam shaping assembly with the purpose of lowering the high-energy source neutrons down to epithermal energies, but not to thermal energies.
 It uses thin layers of cadmium and bismuth to reduce the thermal neutron and gamma population in the patient area.
@@ -246,8 +246,8 @@ Lastly, it surrounds the entire assembly with thick layers of high-density borat
 \end{figure}
 
 The design is not highly optimized.
-It only contains simple types of geometry; i.e. rectangular parallelepipeds and right circular cylinders (RPPs and RCCs in MCNP.)
-No attempt was made to minimize usage of the highly expensive FLUENTAL material.
+It only contains simple types of geometry; i.e. rectangular parallelepipeds, right circular cylinders, and truncated right-angle cones (RPPs, RCCs, and TRCs in MCNP.)
+No attempt was made to minimize usage of the expensive FLUENTAL material.
 Table \ref{tab:proposal:bnct_metrics} shows that the design meets some of the requirements by large margins, but does not meet all requirements.
 \begin{table}[h]
   \centering
