--- a/prelim/prelim.tex
+++ b/prelim/prelim.tex
@@ -13,6 +13,7 @@
 
 \usepackage{empheq}
 \usepackage[usestackEOL]{stackengine}
+\usepackage{cancel}
 
 \input{includes/preamble}
 \input{includes/defs}
